--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-absl (0.11.0-1) UNRELEASED; urgency=medium
+python-absl (0.11.0-1) unstable; urgency=medium
 
   * Initial release. (Closes: #975675)
 
