--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-absl (0.12.0-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Romain Porte <debian@microjoe.org>  Mon, 15 Mar 2021 08:30:17 +0100
+
 python-absl (0.11.0-1) unstable; urgency=medium
 
   * Initial release. (Closes: #975675)
