--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-absl (0.13.0-1) UNRELEASED; urgency=medium
+
+  * New upstream version 0.13.0
+
+ -- Romain Porte <debian@microjoe.org>  Sun, 25 Jul 2021 21:44:51 +0200
+
 python-absl (0.12.0-2) unstable; urgency=medium
 
   * Team upload.
