--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-absl (0.13.0-1) UNRELEASED; urgency=medium
+python-absl (0.13.0-1) unstable; urgency=medium
 
   * New upstream version 0.13.0
 
