--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+python-absl (0.15.0-1) UNRELEASED; urgency=medium
+
+  * Introduce autopkgtests
+  * New upstream version 0.15.0
+
+ -- Romain Porte <debian@microjoe.org>  Wed, 20 Oct 2021 23:35:04 +0200
+
 python-absl (0.13.0-1) unstable; urgency=medium
 
   * New upstream version 0.13.0
